--- a/5_Peer_Graded_Assignment_Questions.ipynb
+++ b/5_Peer_Graded_Assignment_Questions.ipynb
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,13 +353,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Application layout\n",
     "app.layout = html.Div(children=[html.H1('US Domestic Airline Flights Performance',\n",
-    "                                        style = {'textAlign': 'center', 'color': '#503D36', 'font-size':24}),                             \n",
+    "                                style = {'textAlign': 'center', 'color': '#503D36', 'font-size':24}),                             \n",
     "    \n",
     "                                # REVIEW2: Dropdown creation\n",
     "                                # Create an outer division \n",
@@ -372,13 +372,12 @@
     "                                            html.H2('Report Type:', style={'margin-right': '2em'}),\n",
     "                                            ]\n",
     "                                        ),\n",
-    "                                        dcc.Dropdown(\n",
-    "                                            id = 'input-type',\n",
-    "                                            options = [\n",
-    "                                                {'label':'Yearly Airline Performance Report', 'value': 'OPT1'},\n",
-    "                                                {'label':'Yearly Airline Delay Report','value': 'OPT2'}],\n",
-    "                                                 placeholder = 'Select a Report type',\n",
-    "                                                 style = {'width':'80%', 'padding':'3px', 'font-size': '20px', 'text-align-last':'center'}),\n",
+    "                                        dcc.Dropdown(id = 'input-type',\n",
+    "                                                    options = [\n",
+    "                                                    {'label':'Yearly Airline Performance Report', 'value': 'OPT1'},\n",
+    "                                                    {'label':'Yearly Airline Delay Report','value': 'OPT2'}],\n",
+    "                                                     placeholder = 'Select a Report type',\n",
+    "                                                     style = {'width':'80%', 'padding':'3px', 'font-size': '20px', 'text-align-last':'center'}),\n",
     "\n",
     "                                    # Place them next to each other using the division style\n",
     "                                    ], style={'display':'flex'}),                                 \n",
@@ -404,13 +403,15 @@
     "                                # REVIEW3: Observe how we add an empty division and providing an id that will be updated during callback\n",
     "                                html.Div([ ], id='plot1'),\n",
     "    \n",
-    "                                html.Div([\n",
+    "                                    html.Div([\n",
     "                                        html.Div([ ], id='plot2'),\n",
-    "                                        html.Div([ ], id='plot3'),\n",
+    "                                        html.Div([ ], id='plot3')\n",
+    "                                    ], style={'display': 'flex'}), \n",
+    "                                    html.Div([\n",
     "                                        html.Div([ ], id='plot4'),\n",
-    "                                        html.Div([ ], id='plot5'),\n",
-    "                                ], style={'display': 'flex'}),                                                               \n",
-    "                               ])\n",
+    "                                        html.Div([ ], id='plot5')\n",
+    "                                    ], style={'display': 'flex'}),                                                               \n",
+    "                                    ])\n",
     "\n",
     "# Callback function definition\n",
     "# TODO4: Add 5 ouput components\n",
@@ -497,16 +498,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [17/Jul/2021 02:06:06] \"\u001b[37mGET /_shutdown_d722f813-8881-4048-9879-17bc91d7f92d HTTP/1.1\u001b[0m\" 200 -\n",
       " * Running on http://localhost:8050/ (Press CTRL+C to quit)\n",
-      "127.0.0.1 - - [17/Jul/2021 02:06:08] \"\u001b[37mGET /_alive_d722f813-8881-4048-9879-17bc91d7f92d HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [21/Jul/2021 19:59:34] \"\u001b[37mGET /_alive_b997245e-406a-483f-9834-edb76c809201 HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     },
     {
@@ -523,7 +525,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x2350eace700>"
+       "<IPython.lib.display.IFrame at 0x2158e248880>"
       ]
      },
      "metadata": {},
@@ -533,9 +535,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "127.0.0.1 - - [17/Jul/2021 02:06:08] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/Jul/2021 02:06:08] \"\u001b[37mGET /_dash-layout HTTP/1.1\u001b[0m\" 200 -\n",
-      "127.0.0.1 - - [17/Jul/2021 02:06:08] \"\u001b[37mGET /_dash-dependencies HTTP/1.1\u001b[0m\" 200 -\n"
+      "127.0.0.1 - - [21/Jul/2021 19:59:34] \"\u001b[37mGET / HTTP/1.1\u001b[0m\" 200 -\n"
      ]
     }
    ],
